--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~8.2.4",
     "enhanced-resolve": "^4.1.0",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
