--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -4,6 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # imdb API
-imdb.key=86a50682
+imdb.key=your_api_key
 imdb.search.movie.url=http://www.omdbapi.com/?s=%s&type=movie&apikey=%s
 imdb.get.movie.id.url=http://www.omdbapi.com/?i=%s&apikey=%s
